# afia

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json
.cursor/: context.yaml  memory.md
.cursor/rules/: afia.rules.json
.github/: README.md
.github/workflows/: ci.yml
_archived/: ARCHIVED.md
_archived/apps-desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
_archived/apps-desktop/src-tauri/icons/: README.md
_archived/apps-desktop/src-tauri/src/: bootstrap.rs  composition.rs  main.rs
_archived/apps-desktop/src-tauri/src/capabilities/: default.json
_archived/apps-desktop/ui/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
_archived/contracts/: README.md
_archived/contracts/compatibility/: README.md
_archived/contracts/fixtures/: README.md
_archived/crates/: README.md
_archived/crates/afia-ai/: Cargo.toml  README.md
_archived/crates/afia-application/: Cargo.toml  README.md
_archived/crates/afia-application/src/: lib.rs
_archived/crates/afia-contracts/: Cargo.toml  README.md
_archived/crates/afia-contracts/src/: lib.rs
_archived/crates/afia-documents/: Cargo.toml  README.md
_archived/crates/afia-domain/: Cargo.toml  README.md
_archived/crates/afia-plugins/: Cargo.toml  README.md
_archived/crates/afia-search/: Cargo.toml  README.md
_archived/crates/afia-security/: Cargo.toml  README.md
_archived/crates/afia-storage/: Cargo.toml  README.md
_archived/crates/afia-storage/src/: lib.rs
_archived/crates/afia-tauri/: Cargo.toml  README.md
_archived/crates/afia-workspace/: Cargo.toml  README.md
_archived/services-ai-python/: README.md  pyproject.toml
_archived/services-ai-python/src/afia_ai/: __init__.py
_archived/services-ai-python/src/afia_ai/adapters/: __init__.py
_archived/services-ai-python/src/afia_ai/adapters/openmed/: __init__.py
_archived/services-ai-python/src/afia_ai/api/: __init__.py
_archived/services-ai-python/src/afia_ai/app/: __init__.py
_archived/services-ai-python/src/afia_ai/auth/: __init__.py
_archived/services-ai-python/src/afia_ai/capabilities/: __init__.py
_archived/services-ai-python/src/afia_ai/execution/: __init__.py
_archived/services-ai-python/src/afia_ai/health/: __init__.py
_archived/services-ai-python/src/afia_ai/schemas/: __init__.py
_archived/services-ai-python/tests/contract/: README.md
_archived/services-ai-python/tests/fixtures/: README.md
_archived/services-ai-python/tests/integration/: README.md
_archived/services-ai-python/tests/unit/: README.md
_archived/services-operations-go/: README.md  go.mod
_archived/services-operations-go/migrations/: README.md
_archived/services-operations-go/testdata/: README.md
afia-ui/: gen_patients.py  ideas.md  package.json  pnpm-lock.yaml  template.json  tsconfig.json  vite.config.ts
afia-ui/client/: index.html
afia-ui/client/src/: App.tsx  const.ts  index.css  main.tsx
afia-ui/shared/: const.ts
afia-ui/supabase/: schema.sql
afia-ui/supabase/.temp/: linked-project.json
apps/: README.md
contracts/: README.md
contracts/compatibility/: README.md
crates/afia-ai/: Cargo.toml
crates/afia-application/: Cargo.toml  README.md
crates/afia-documents/: Cargo.toml  README.md
crates/afia-domain/: Cargo.toml  README.md
crates/afia-domain/src/: lib.rs
crates/afia-plugins/: Cargo.toml  README.md
crates/afia-plugins/src/: lib.rs
crates/afia-search/: Cargo.toml
crates/afia-security/: Cargo.toml
crates/afia-security/src/: lib.rs
crates/afia-storage/: README.md
crates/afia-tauri/: Cargo.toml  README.md
crates/afia-workspace/: Cargo.toml  README.md
crates/afia-workspace/src/: lib.rs
docs/: README.md  execution-rules.md
docs/adr/: README.md
docs/architecture/: README.md
docs/product/: AFIA_FULL_BUILD_PLAN.md  AFIA_MASTERPLAN.md  README.md  v1-engineering-program.md  v1-task-ledger.md
docs/quality/: README.md
docs/releases/: README.md
docs/runbooks/: README.md
docs/security/: README.md
lib/: clinical-event.ts  clinical-modules.ts  clinical-registry.ts  clinical-timeline.ts  notes.ts
lib/clinical-events/: adapter.ts  factories.ts  index.ts  types.ts
lib/clinical-timeline/: index.ts  store.ts  types.ts
lib/control/: evaluate.ts  index.ts  intercepted.ts  store.ts  types.ts
lib/encounter/: index.ts  store.ts  types.ts
lib/episode/: index.ts  store.ts  types.ts
lib/observability/: index.ts  instrumented.ts  store.ts  types.ts
lib/patient/: index.ts  store.ts  types.ts
lib/production/: blueprint.ts  index.ts  topology.ts  types.ts  validate.ts
lib/query/: graph.ts  helpers.ts  index.ts  types.ts
lib/reasoning/: activity.ts  episode.ts  helpers.ts  index.ts  summary.ts  types.ts
lib/runtime/: execute.ts  index.ts  store.ts  types.ts
packaging/: README.md
packaging/macos/: README.md
packaging/models/: README.md
packaging/python/: README.md
scripts/: agent-boundary-check.ts  encounter-timeline-test.ts  patient-journey-test.ts  temporal-consistency-test.ts
scripts/fault-injection/: fault-broken-chains.ts  fault-helpers.ts  fault-missing-references.ts  fault-orphan-events.ts  fault-timestamp-collision.ts
services/: README.md  fhir_gate.py  openmed_bridge.py  requirements-bridge.txt
services/ai-python/: README.md  pyproject.toml
supabase/migrations/: workspaces.sql
tests/: README.md
tests/contract/: README.md
tests/e2e/: README.md
tests/fixtures/: README.md
tests/integration/: README.md
tests/performance/: README.md
tests/security/: README.md
tools/: README.md
(+206 files in other folders)
