# AFIA managed Python AI runtime.
# TODO(S02-T02): Pin the exact Python and package versions (no floating dependencies).
# uv.lock is generated and must recreate the environment from an empty cache.

[project]
name = "afia-ai"
version = "0.0.0"
description = "AFIA managed Python runtime — AI execution only. No application state."
requires-python = ">=3.12"
dependencies = [
    # TODO(S02-T02): fastapi, uvicorn, and pinned OpenMed packages.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/afia_ai"]
