# afia-plugins — v1 internal plugin contracts and disabled-by-default host gate.
# Dependency rule: domain, contracts, application ports.
[package]
name = "afia-plugins"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# TODO: afia-domain, afia-contracts, afia-application (ports).
