# afia-security — key hierarchy, encryption primitives, authentication, audit chain.
# Dependency rule: domain, application ports.
[package]
name = "afia-security"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# TODO: afia-domain, afia-application (ports). Pin crypto/keychain crates exactly.
