# afia-workspace — project package lifecycle, locking, backup, restore, recovery.
# Dependency rule: domain, application ports, security, storage.
[package]
name = "afia-workspace"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# TODO: afia-domain, afia-application (ports), afia-security, afia-storage.
